# book-notes-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: enrich-and-deploy.yml
app/: cli.py  main.py
app/routes/: enrich.py  graph.py
app/services/: build_graph.py  enrich.py  scaffold.py
books/example/: ch1-example.md  ch1-example_enriched.json  meta.yaml
books/the-almanack-of-naval-ravikant/: ch1-introduction.md  ch1-introduction_enriched.json  ch10-conclusion.md  ch10-conclusion_enriched.json  ch2-wealth.md  ch2-wealth_enriched.json  ch3-happiness.md  ch3-happiness_enriched.json  ch4-decision-making.md  ch4-decision-making_enriched.json  ch5-specific-knowledge.md  ch5-specific-knowledge_enriched.json  ch6-learning.md  ch6-learning_enriched.json  ch7-play-long-term-games.md  ch7-play-long-term-games_enriched.json  ch8-health.md  ch8-health_enriched.json  ch9-relationships.md  ch9-relationships_enriched.json  meta.yaml
books/the-intelligent-investor/: ch1-investment-versus-speculation-results-to-be-expected-by-the-intelligent-investor.md  ch1-investment-versus-speculation-results-to-be-expected-by-the-intelligent-investor_enriched.json  ch10-the-investor-and-his-advisers.md  ch10-the-investor-and-his-advisers_enriched.json  ch12-things-to-consider-about-per-share-earnings.md  (+36 more)
public/: graph-data.json
scripts/: bootstrap.sh  build_graph.py  enrich.py  scaffold.py
site/: index.html
src/: main.js  mindmap.js  reader.js  style.css
static/: main.js  mindmap.js  shortcuts.js  style.css
(+46 files in other folders)
